--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ div {
 .header__logo { 
    display: flex; 
    align-items: center;
-   margin-top: -12px;    
+   margin-top: -12px;     
  }
 
 .header__logo img {
@@ -35,6 +35,7 @@ div {
    display: flex;
    justify-content: space-around; 
    align-items: center;
+   flex-direction: column;
 }
 
 .menu { 	
@@ -54,7 +55,7 @@ div {
    letter-spacing: 1px; 
    transition: linear 0.30s;
    font-weight: 400; 
-   font-family: 'Oswald';
+   font-family: "Oswald";
 }
 
 .menu a:hover {
@@ -63,7 +64,7 @@ div {
 
 .header__icon {   
    display: flex;
-   justify-content: flex-end;  
+   justify-content: flex-end;   
    margin: -39px 75px;   
 }    
 
@@ -263,13 +264,13 @@ div {
 
 .middle__box { 
    display: flex;
-   justify-content: space-between;
+   justify-content: space-between;   
    max-width: 938px;   
 }
 
 .midlle__server {
    width: 333px;
-   margin: 0px -75px;
+   margin: 0px -75px;   
 }
 
 .midlle__server:nth-child(2) {	
@@ -585,13 +586,13 @@ b {
     
 .clients {
    background-color:#fff;
-   height: 529px;
+   min-height: 529px;   
 } 
   
 .clients__visions {  
    display: flex;
    justify-content: center;
-   max-width: 915px;  
+   max-width: 915px;   
 }
 
 .clients__visions h1 {  
@@ -611,7 +612,7 @@ b {
    width: 350px;
    position: relative;
    bottom: 80px;
-   left: -55px;
+   left: -55px;   
 }
 
 .clients__left:before {
@@ -643,3 +644,33 @@ b {
    top: -2px;
    z-index: 1; 
 }
+
+
+.clients__basis {       
+   padding: 80px 90px 115px;
+   width: 100%;
+}
+
+.clients__icon {   
+   display: flex;   
+   justify-content: space-around;
+   align-items: center;
+   width: 100%;   
+}
+
+.clients__icon img {  
+   margin-top: 70px
+   margin-left: 85px;   
+}
+
+.clients__item {   
+   display: flex;   
+   justify-content: space-around;
+   align-items: center;
+   width: 100%;
+}
+
+.clients__item img {
+   margin-left: -80px; 
+   margin-top: 90px;     
+}  
